--- a/BlazorAppMaHub/Components/Layout/NavMenu.razor
+++ b/BlazorAppMaHub/Components/Layout/NavMenu.razor
@@ -19,14 +19,13 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="/portfolio/stocks">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Stocks
             </NavLink>
         </div>
-
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="/portfolio/dividends">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Dividends
             </NavLink>
         </div>
 
