--- a/BlazorAppMaHub/Components/_Imports.razor
+++ b/BlazorAppMaHub/Components/_Imports.razor
@@ -4,8 +4,12 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using System.ComponentModel.DataAnnotations
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using BlazorAppMaHub
 @using BlazorAppMaHub.Components
+
+
+@using BlazorAppMaHub.Data
